--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-1.91MB/s(Youtube:不良林), server: sg-cn.teacher2050.com, port: 43508, type: trojan, password: E44523FE-B9E4-BD49-AEAF-DBABE701D016, sni: sg-cn.teacher2050.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: 120.241.236.93, port: 46061, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-233.5KB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.64MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-333.8KB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-256.2KB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 未知国家-564.8KB/s(Youtube:不良林), server: 193.178.210.29, port: 443, type: trojan, password: iKR3Ft, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.88MB/s(Youtube:不良林), server: 120.241.236.93, port: 46061, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.64MB/s(Youtube:不良林), server: 106.wgong2.xyz, port: 11223, type: vmess, uuid: 67d0d0b2-e1fe-3213-a591-90b01419bc66, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.09MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-330.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇨🇳 中国-884.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-342.6KB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-211.5KB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-233.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
+      - 未知国家-564.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-884.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-211.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-233.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
+      - 未知国家-564.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-884.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-211.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,19 +53,20 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-233.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
+      - 未知国家-564.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-884.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-211.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -73,30 +74,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-233.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
+      - 未知国家-564.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-884.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-211.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-233.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
+      - 未知国家-564.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-884.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-211.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +105,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-233.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
+      - 未知国家-564.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-884.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-211.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +130,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-1.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-233.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
+      - 未知国家-564.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-884.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-211.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
