--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-256.2KB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-386.4KB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-527.7KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-206.8KB/s(Youtube:不良林), server: 150.230.60.8, port: 26195, type: vmess, uuid: 8c44be2e-2e16-4cf4-db1e-a1c8c61b7fd4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 101.wgong2.xyz, port: 52201, type: vmess, uuid: 67d0d0b2-e1fe-3213-a591-90b01419bc66, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.54MB/s(Youtube:不良林), server: gycd1.csccdd.xyz, port: 52340, type: vmess, uuid: 1dc13504-e4ba-3c49-8e0b-6a3eb4e40335, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: gycd1.csccdd.xyz}}
+  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-757.6KB/s(Youtube:不良林), server: 101.wgong2.xyz, port: 52201, type: vmess, uuid: 67d0d0b2-e1fe-3213-a591-90b01419bc66, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-217.2KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-254.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇭🇰 香港-717.2KB/s(Youtube:不良林), server: 106.wgong2.xyz, port: 11223, type: vmess, uuid: 67d0d0b2-e1fe-3213-a591-90b01419bc66, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-225.5KB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
   - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: 172.96.192.100, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
+  - {name: 🇩🇪 德国-223.6KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-424.3KB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: 21882ea6-235b-4463-93d4-55c7d378857d, sni: hk64.fans8.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-527.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-206.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-217.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-254.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-717.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-225.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-527.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-206.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-217.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-254.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-717.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-225.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-527.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-206.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-217.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-254.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-717.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-225.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-717.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-527.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-206.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-217.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-254.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-717.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-225.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-527.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-206.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-217.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-254.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-717.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-225.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-527.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-206.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-217.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-254.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-717.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-225.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-256.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-386.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-527.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-206.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-757.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-217.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-254.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-717.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-225.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
