--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,8 +5,8 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-151.8KB/s(Youtube:不良林), server: 101.wgong2.xyz, port: 52201, type: vmess, uuid: 67d0d0b2-e1fe-3213-a591-90b01419bc66, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-561.3KB/s(Youtube:不良林), server: 172.96.192.100, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
+  - {name: 🇨🇳 中国-3.20MB/s(Youtube:不良林), server: 120.241.236.93, port: 51700, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-770.9KB/s(Youtube:不良林), server: 106.wgong2.xyz, port: 11223, type: vmess, uuid: 67d0d0b2-e1fe-3213-a591-90b01419bc66, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇩🇪 德国-263.3KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-398.5KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
   - {name: 🇺🇸 美国-335.0KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
@@ -16,8 +16,8 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-151.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-770.9KB/s(Youtube:不良林)
       - 🇩🇪 德国-263.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-398.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-335.0KB/s(Youtube:不良林)
@@ -26,8 +26,8 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-151.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-770.9KB/s(Youtube:不良林)
       - 🇩🇪 德国-263.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-398.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-335.0KB/s(Youtube:不良林)
@@ -37,8 +37,8 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-151.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-770.9KB/s(Youtube:不良林)
       - 🇩🇪 德国-263.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-398.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-335.0KB/s(Youtube:不良林)
@@ -46,14 +46,15 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-770.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-151.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-770.9KB/s(Youtube:不良林)
       - 🇩🇪 德国-263.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-398.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-335.0KB/s(Youtube:不良林)
@@ -62,8 +63,8 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-151.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-770.9KB/s(Youtube:不良林)
       - 🇩🇪 德国-263.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-398.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-335.0KB/s(Youtube:不良林)
@@ -73,8 +74,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-151.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-770.9KB/s(Youtube:不良林)
       - 🇩🇪 德国-263.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-398.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-335.0KB/s(Youtube:不良林)
@@ -93,8 +94,8 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-151.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-561.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇭🇰 香港-770.9KB/s(Youtube:不良林)
       - 🇩🇪 德国-263.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-398.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-335.0KB/s(Youtube:不良林)
